--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "license": "MIT",
   "devDependencies": {
     "webpack": "^5.38.1",
-    "webpack-cli": "^4.7.2",
+    "webpack-cli": "3.3.12",
     "webpack-dev-server": "^3.11.2"
   },
   "scripts": {
-    "serve": "webpack serve"
+    "serve": "webpack-dev-server"
   }
 }
